knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CampaignMember/fields/Account_Engagement_Grade_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Engagement_Grade_Contact__c</fullName>
    <description>Formula field to pull in data fed to contact from pardot.</description>
    <formula>Contact.pi__grade__c</formula>
    <label>Account Engagement Grade - Contact</label>
    <type>Text</type>
</CustomField>