knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CampaignMember/fields/cisco_webex__Imported_From_Webex__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Imported_From_Webex__c</fullName>
    <label>Imported From Webex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>