knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CampaignMember/fields/cisco_webex__Webinar_Status__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webinar_Status__c</fullName>
    <label>Webinar Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Not Invited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>